--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <title>Editor</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.6/ace.js">
     </script>
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
+
   <body onload="ready()">
+    <div id="container">
+      <div class="" id="editor">
+
+      </div>
+
+      <iframe src="" id="iframe"></iframe>
+    </div>
+
+
+
     <script type="text/javascript">
       function ready()
       {
