--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Editor</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.6/ace.js">
     </script>
+    <script src="script.js">
+
+    </script>
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
 
@@ -19,11 +22,5 @@
 
 
 
-    <script type="text/javascript">
-      function ready()
-      {
-        alert('yo');
-      }
-    </script>
   </body>
 </html>
